testsuite/tests/polykinds/T16245a.stderr

T16245a.hs:11:66: error:
    • Expected kind ‘k’, but ‘b’ has kind ‘k1’
      ‘k1’ is a rigid type variable bound by
        the newtype declaration for ‘T’
        at T16245a.hs:11:12
      ‘k’ is a rigid type variable bound by
        the newtype declaration for ‘T’
        at T16245a.hs:11:1-67
    • In the second argument of ‘SameKind’, namely ‘b’
      In the type ‘(forall (b :: k). SameKind a b)’
      In the definition of data constructor ‘MkT’
